--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "yarn": "^1.22.18"
   },
   "scripts": {
+    "prestart": "npm run license",
+    "license": "./node_modules/.bin/license-to-fail ./config/license-checker-config.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
