testing for overlay component added

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "license-checker": "^25.0.1",
-    "license-to-fail": "^4.0.0"
+    "license-to-fail": "^4.0.0",
+    "react-test-renderer": "^18.0.0"
   }
 }
